fix shadow clipping

--- a/less/site.less
+++ b/less/site.less
@@ -1,7 +1,8 @@
 ul.new-project__buttons {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    /* padding at bottom to avoid shadow clipping */
+    padding: 0 0 0.2em 0;
     overflow: hidden;
     li {
         float: left;
